tests/rgs/syntax_errors/named_story_missing_priority_keyword.rgs
STORY quest 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    AGENT Hero:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
